# t-event

./: CMakeLists.txt  course.cpp  course.h  forminfo.h  formonline.ui  formperson.cpp  formperson.h  formperson.ui  group.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  organization.cpp  person.cpp  person.h  postrequestsender.cpp  postrequestsender.h  qsportevent.cpp  qsportevent.h  race.cpp  race.h  recentfile.cpp  resource.qrc  result.cpp  result.h  settingsdialog.h  settingsdialog.ui  tcoursemodel.cpp  tgroupmodel.cpp  torganizationmodel.cpp  tpersonmodel.cpp  tresultmodel.cpp  tresultmodel.h
app/: CMakeLists.txt  README.md
app/src/: formfilter.cpp  formfilter.h  formfilter.ui  formonline.cpp  formonline.h  formperson.cpp  formperson.h  formperson.ui  formresult.cpp  formresult.h  formresult.ui  functions.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  organization.cpp  organization.h  person.cpp  person.h  postrequestsender.h  qsportevent.cpp  qsportevent.h  race.cpp  race.h  racesettings.cpp  racesettings.h  recentfile.cpp  result.cpp  result.h  settingsdialog.cpp  settingsdialog.ui  tcoursemodel.h  tgroupmodel.h  torganizationmodel.h  tpersonmodel.cpp  tpersonmodel.h  tresultmodel.cpp
img/: icon.rc
src/: forminfo.cpp  forminfo.ui  formonline.cpp  formonline.h  formperson.cpp  formperson.h  formperson.ui  formprepar.cpp  formprepar.h  formprepar.ui  formresult.cpp  formresult.h  formresult.ui  functions.h  group.cpp  group.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  organization.h  person.cpp  person.h  qsportevent.cpp  qsportevent.h  race.cpp  race.h  racesettings.cpp  racesettings.h  recentfile.cpp  result.h  tcoursemodel.cpp  tcoursemodel.h  tgroupmodel.cpp  tgroupmodel.h  torganizationmodel.cpp  torganizationmodel.h  tpersonmodel.cpp  tpersonmodel.h  tresultmodel.cpp  (+1 more)
test/: CMakeLists.txt  tst_test.cpp
